@@ -379,6 +379,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-9601. NNThroughputBenchmark.BlockReportStats should handle
         NotReplicatedYetException on adding block. (iwasakims)
 
+    HDFS-9357. NN UI renders icons of decommissioned DN incorrectly.
+    (Surendra Singh Lilhore via wheat9)
+
 Release 2.7.3 - UNRELEASED
     HDFS-10623. Remove unused import of httpclient.HttpConnection from
     TestWebHdfsTokens. (Hanish Koneru via Arpit Agarwal)
